<resources>
    <string name="app_name">Little Louder</string>
    <string name="app_name_subtitle">Listen IT</string>

    <string name="title_activity_user_home">UserHome</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="developer_mail">chandra.prakashg01@gmail.com</string>

    <string name="home">Home</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="newpost">New Post</string>
    <string name="title_activity_settings">Settings</string>

    <string name="Local">localhost:8088</string>
    <string name="IP">192.168.0.3:8088</string>

</resources>
