<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gupta.littlelouder.ScrollingActivity">

    <item
        android:id="@+id/refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        android:icon="@drawable/ic_sync_black_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />
    <item
        android:id="@+id/change_password"
        android:orderInCategory="100"
        android:title="@string/change_password"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
