<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gupta.littlelouder.AdminHome">

    <item
        android:id="@+id/newpost"
        android:orderInCategory="100"
        android:title="@string/newpost"
        android:icon="@drawable/ic_info_black_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />
    <item
        android:id="@+id/change_password"
        android:orderInCategory="100"
        android:title="@string/change_password"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>